test/parse/strict/bad/secondvlinesection.sol
s SATISFIABLE
v -1 0
c some comments
v 2 0
